--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,12 +59,13 @@
 /* Basic */
 
 	body, input, select, textarea {
-		color: yellow;
+		color: #FFF13F;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 15pt;
 		font-weight: 300 !important;
 		letter-spacing: -0.025em;
 		line-height: 1.75em;
+		text-shadow: 2px 2px #E5D939;
 	}
 
 	body {
@@ -559,7 +560,7 @@
 					-ms-transition: all 0.2s ease-in-out;
 					transition: all 0.2s ease-in-out;
 					border-radius: 100%;
-					border: solid 1px #fff;
+					border: solid 1px #914FFF;
 					display: block;
 					font-size: 1.75em;
 					height: 2.5em;
@@ -576,7 +577,7 @@
 
 					#header nav a:hover:before {
 						background-color: rgba(255, 255, 255, 0.175);
-						color: #fff;
+						color: #914FFF;
 					}
 
 				#header nav a:active {
