--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,7 +65,7 @@
 		font-weight: 300 !important;
 		letter-spacing: -0.025em;
 		line-height: 1.75em;
-		text-shadow: 2px 2px #E5D939;
+		text-shadow: 1px 1px #B28716;
 	}
 
 	body {
